[package]
name = "setheum-rpc"
version = "0.9.0"
authors = ["Setheum Labs"]
edition = "2018"

[dependencies]
# external dependencies
jsonrpc-core = "15.0.0"
codec = { package = "parity-scale-codec", version = "2.0.0" }

# Substrate dependencies
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-consensus = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.8" }
sp-consensus-babe = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.8" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sc-consensus-babe = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.8" }
sc-consensus-babe-rpc = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.8" }
sc-consensus-epochs = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.8" }
sc-finality-grandpa = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.8" }
sc-finality-grandpa-rpc = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.8" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-keystore = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.8" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }

# orml dependencies
orml-oracle-rpc = { path = "../lib-openrml/oracle/rpc" }

# local dependencies
evm-rpc = { path = "../lib-serml/evm/evm/rpc" }
runtime-common = { path = "../runtime/common" }
primitives = { package = "setheum-primitives", path = "../primitives" }
