[package]
authors = ['Setheum Labs<https://github.com/Setheum-Labs>']
description = 'sett currencies SettCurrencies pallet'
edition = '2018'
homepage = 'https://setheum.xyz'
license = 'Apache-2.0 License'
name = "storage-adapters"
repository = 'https://github.com/Setheum-Labs/Setheum/'
version = '0.2.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
frame-support = { default-features = false, version = '2.0.0-alpha.5' }
num-traits = { default-features = false, version = "0.2.11" }
sp-std = { default-features = false, version = '2.0.0-alpha.5' }

# dev-dependencies that have to be dependencies because of this cargo issue:
# https://github.com/rust-lang/cargo/issues/6915
sp-io = { default-features = false, version = '2.0.0-alpha.5' }
sp-runtime = { default-features = false, version = '2.0.0-alpha.5' }
system = { default-features = false, package = 'frame-system', version = '2.0.0-alpha.5' }

[dev-dependencies]
sp-core = { default-features = false, version = '2.0.0-alpha.5' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'sp-runtime/std',
    'sp-io/std',
    'sp-std/std',
    'system/std',
]